[package]
name = "lok-test"
version = "0.1.0"
edition = "2021"

[dependencies]
libreofficekit = "0.5"
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
rmp-serde = "1"
bytes = "1"
anyhow = "1"
tracing = "0.1"
ctor = "0.6"
